# 5G_PCSE_Technical_Task

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Func_delegate_tst.cpp  client.cpp  server.cpp
src/Docker/: docker-compose.yml
src/Docker/client/: Dockerfile
src/Docker/server/: Dockerfile
tst/: CMakeLists.txt  unit_test.cpp
